[package]
name = "openxr-test"
version = "0.1.0"
authors = ["Adrien Grandemange <itsmeadri@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
ndk-glue = "0.3"
openxr-sys = "0.8"
libloading = "0.7"
ash = "0.32"
env_logger = "0.8"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
min_sdk_version = 16
target_sdk_version = 29
launch_mode = "singleTask"
orientation = "landscape"
runtime_libs = "apk_content/lib"

[[package.metadata.android.application_metadatas]]
name = "com.samsung.android.vr.application.mode"
value = "vr_only"

[[package.metadata.android.application_metadatas]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[[package.metadata.android.activity_metadatas]]
name = "com.oculus.vr.focusaware"
value = "true"

[[package.metadata.android.intent_filter]]
name = "android.intent.action.MAIN"
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
data = []